--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "presentation",
+  "name": "takehome",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "dependencies": {
     "@babel/runtime": "^7.12.1",
-    "dayjs": "^1.9.4",
+    "axios": "^0.21.1",
     "express": "^4.17.1",
-    "moment": "^2.29.1",
-    "moment-business-days": "^1.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "webpack-cli": "^4.1.0"
   },
   "devDependencies": {
@@ -18,6 +17,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "nodemon": "^2.0.7",
     "webpack": "^5.3.2"
   },
   "scripts": {
@@ -27,12 +27,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/winohbell/presentation.git"
+    "url": "git+https://github.com/winohbell/takehome.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/winohbell/presentation/issues"
+    "url": "https://github.com/winohbell/takehome/issues"
   },
-  "homepage": "https://github.com/winohbell/presentation#readme"
+  "homepage": "https://github.com/winohbell/takehome#readme"
 }
