--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "css-loader": "^5.2.5",
+    "node-sass": "^6.0.0",
     "nodemon": "^2.0.7",
-    "webpack": "^5.3.2"
+    "sass-loader": "^11.1.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.37.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
